--- a/content/src/main/content/jcr_root/etc/designs/cdgd/clientlibs/css/styles.css
+++ b/content/src/main/content/jcr_root/etc/designs/cdgd/clientlibs/css/styles.css
@@ -54,6 +54,7 @@ img {
 	float: left;
 	margin-left: 4px;
 	font-size: 11px;
+	font-weight: bold;
 	line-height: 11px;
 	text-transform: uppercase;
 	letter-spacing: 1px;
